--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.24.0",
     "vant": "^3.3.7",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
-    "postcss-px-to-viewport": "^1.1.1",
+    "postcss": "^8.4.5",
+    "postcss-pxtorem": "^6.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
+    "vite-plugin-style-import": "^1.2.1",
     "vue-tsc": "^0.29.8"
   }
 }
