--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.24.0",
     "vant": "^3.3.7",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
