--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.24.0",
+    "less": "^4.1.2",
     "vant": "^3.3.7",
     "vue": "^3.2.25",
     "vue-router": "^4.0.12"
