--- a/docker/Dockerfile-beta
+++ b/docker/Dockerfile-beta
@@ -8,7 +8,7 @@ FROM node:14.18.0-alpine as build
 WORKDIR /app
 COPY . .
 COPY --from=base /app/node_modules /app/node_modules
-RUN npm run build
+# RUN npm run build
 
 FROM nginx:alpine as prod
 COPY ./docker/nginx-beta.conf /etc/nginx/nginx.conf
